kubernetes/apps/personal/gitea/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
spec:
  parentRefs:
    - {name: envoy-internal, namespace: network}
  hostnames:
    - "gitea.mistelinn.org"
  rules:
    - backendRefs:
        - name: gitea-http
          namespace: personal
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
